.devops/kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: '${namespace}'
  name: '${package_name}'
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'false'
spec:
  rules:
    - host: '${domain}'
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              serviceName: '${package_name}'
              servicePort: 80
  tls:
    - hosts:
        - ${domain}
      secretName: '${domain_clean}'
